syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "./file-upload-service";

service ImageUploadService {
  rpc GetImage(GetImageRequest) returns (GetImageResponse) {};
  rpc UploadImage(ImageUploadRequest) returns (ImageUploadResponse) {};
  rpc DeleteImage(DeleteImageRequest) returns (DeleteImageResponse) {};
}
// GetImage

message GetImageRequest {
  string id = 1 [(validate.rules).string.min_len = 1]; // This could be an image ID or filename
}
  
message GetImageResponse {
  bytes image_data = 1;
}

// UploadImage

message ImageUploadRequest {
  bytes image_data = 1;
}

message ImageUploadResponse {
  bool success = 1;
  string file_id = 2;
}

// DeleteImage

message DeleteImageRequest {
  string id = 1 [(validate.rules).string.min_len = 1]; // This could be an image ID or filename
}

message DeleteImageResponse {
  bool success = 1;
}